# ------------------------------------------------------------
# 프로젝트 설정 정보 (Poetry에서 사용하는 기본 정보)
# ------------------------------------------------------------
[tool.poetry]

name = "todo"           # * 프로젝트 이름 (폴더명과는 무관함)
version = "0.1.0"       # * 프로젝트 버전 (업데이트 시 변경 가능)
description = ""        # * 프로젝트에 대한 간단한 설명
authors = ["Jinseon Lee <memilmuk82@gmail.com>"]  # * 작성자 이름 및 이메일
readme = "README.md"    # * 프로젝트 소개를 담은 문서 파일 이름

# * 포함할 파이썬 패키지(폴더)를 지정
# - 일반적으로 우리가 만든 코드가 들어 있는 폴더명을 지정함
packages = [
  {include = "api"}     # * 'api' 폴더 안의 파일들을 패키지로 포함시킴
]

# ------------------------------------------------------------
# 프로젝트에 필요한 패키지들 (의존성 목록)
# ------------------------------------------------------------
[tool.poetry.dependencies]

python = "^3.12"         # * 사용 가능한 파이썬 버전 (3.12 이상)

# * 웹 프레임워크
fastapi = "^0.115.12"    # - API 서버를 빠르게 만들 수 있는 프레임워크

# * 웹 서버 실행 도구
uvicorn = {extras = ["standard"], version = "^0.34.0"}
# - FastAPI 앱을 실행할 때 사용하는 서버
# - "standard" 옵션을 추가하면 필요한 보조 기능들이 포함됨

# * 데이터베이스 연동 패키지
sqlalchemy = "^2.0.40"   # - ORM 기능을 제공 (SQL 없이 파이썬 코드로 테이블 다루기)
asyncpg = "^0.30.0"      # - PostgreSQL과 비동기로 연결할 수 있게 해주는 드라이버

# ------------------------------------------------------------
# 프로젝트를 빌드(포장)할 때 필요한 설정
# ------------------------------------------------------------
[build-system]

# * 빌드를 실행할 때 필요한 기본 도구
requires = ["poetry-core"]

# * 빌드 처리를 실제로 담당하는 백엔드 도구
build-backend = "poetry.core.masonry.api"
